--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ img {
 
   width: 100%;
   height: 100%;
+  z-index: 100;
   transform: translateX(100%);
   background-color: var(--white-color);
 
@@ -288,12 +289,10 @@ img {
 /* HERO SECTION */
 .hero {
   background-image: linear-gradient(
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)
-  );
-
-  /* ,
-    url("../images/hero/people-office.jpg"); */
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/hero/dark-bg-mobile.jpg");
 
   background-size: cover;
   background-position: center;
@@ -303,6 +302,17 @@ img {
   padding-top: 112px;
   padding-bottom: 112px;
   margin: 0 auto;
+}
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero/dark-bg-mobile@2x.jpg");
+  }
 }
 
 .hero-title {
@@ -647,18 +657,20 @@ img {
 
 /* ==============  PORTFOLIO PAGE ================ */
 
-/* PORTFOLIO FILTER BUTTONS  */
-
 .portfolio-section {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
+
+/* PORTFOLIO FILTER BUTTONS  */
 
 .filters-container {
   display: flex;
-  margin-bottom: 72px;
-  justify-content: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-bottom: 48px;
+
+  gap: 16px 24px;
 }
 
 .filter-buttom {
@@ -700,11 +712,11 @@ img {
 .portfolio-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px 24px;
+  gap: 48px;
 }
 .portfolio-card {
   background-color: var(--white-color);
-  flex-basis: calc(100%-48px) / 3;
+  /* flex-basis: calc(100%-48px) / 3; */
 }
 
 .portfolio-card-text {
