--- a/css/media.css
+++ b/css/media.css
@@ -181,15 +181,16 @@
       url("../images/hero/dark-bg-tablet.jpg");
   }
   @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ), url("../images/hero/dark-bg-tablet@2x.jpg");
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url("../images/hero/dark-bg-tablet@2x.jpg");
+    }
   }
-}
 }
 
 @media screen and (min-width: 768px) {
@@ -200,23 +201,25 @@
       ),
       url("../images/hero/dark-bg-desktop.jpg");
   }
-    @media (min-device-pixel-ratio: 2),
+  @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
       background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ), url("../images/hero/dark-bg-desktop@2x.jpg");
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url("../images/hero/dark-bg-desktop@2x.jpg");
     }
 
-  .hero-title {
-    max-width: 496px;
-    margin-bottom: 36px;
+    .hero-title {
+      max-width: 496px;
+      margin-bottom: 36px;
 
-    font-size: 56px;
-    line-height: 1.07;
-    text-transform: none;
+      font-size: 56px;
+      line-height: 1.07;
+      text-transform: none;
+    }
   }
 }
 
@@ -228,6 +231,7 @@
   }
 
   .hero-title {
+    max-width: 496px;
     margin-bottom: 48px;
 
     font-size: 56px;
