--- a/css/media.css
+++ b/css/media.css
@@ -439,7 +439,7 @@
     width: 392px;
   }
 }
-@media screen and (min-width: ) {
+@media screen and (min-width: 768px) {
   .modal {
     width: 408px;
   }
